# Homework_Web_13

./: README.md
Web_Homework_13_1/: draft.py  main.py  pyproject.toml
Web_Homework_13_1/src/database/: models.py
Web_Homework_13_1/src/routes/: auth.py  contacts.py
Web_Homework_13_1/src/services/: auth.py
web_homework_13_2/django/django_project/: pyproject.toml
web_homework_13_2/django/notes/noteapp/: urls.py  views.py
web_homework_13_2/django/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
web_homework_13_2/django/notes/noteapp/templates/noteapp/: detail.html
web_homework_13_2/django/notes/notes/: settings.py
web_homework_13_2/django/notes/users/: views.py
web_homework_13_2/quotes/quotes/: settings.py
web_homework_13_2/quotes/users/: forms.py  views.py
web_homework_13_2/quotes/users/templates/users/: login.html  signup.html
